<resources>
    <string name="app_name">MemfixRef</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_kit">Storage</string>

    <string name="my_data">My Data</string>
    <string name="frequently_used">Frequently used</string>

    <string name="main_menu_item_1">Start</string>
    <string name="main_menu_item_2">Add new kit</string>
    <string name="main_menu_item_3">Search kits</string>

    <string name="kit_name">Kit name</string>
    <string name="add_kit">Add kit</string>
    <string name="cell_name">Cell name</string>
    <string name="memorize_key">memorize key</string>
    <string name="confirm">Confirm</string>
    <string name="decline">decline</string>
    <string name="data">data</string>
    <string name="add_cell">Add cell</string>
    <string name="user_name">Username</string>
    <string name="some_inspiration_quote">Some inspiration quote</string>
    <string name="save">Save</string>
    <string name="menu_kit_storage">Kit storage</string>
    <string name="kit_package_name">Kit Package Name</string>
    <string name="total_use">Total use :</string>
    <string name="last_use">Last use :</string>
    <string name="update">Update</string>
    <string name="remove_kit_btn">Remove</string>
    <string name="cancel_btn">Cancel</string>
    <string name="remove_kit_with_cells_format">Remove %s with Cells?</string>

    <string name="toast_success_kit_remove">Kit successfully removed </string>
    <string name="toast_fail_kit_remove">Some problem occurrence with kit try again</string>
    <string name="toast_reload_app">Some going wrong, please reload application</string>
    <string name="toast_empty_fields">Some required fields are empty</string>
    <string name="toast_success_save_name">"Username changed successfully"</string>
    <string name="toast_fail_save_name">"Too less name length"</string>
    <string name="toast_success_save_quote">"Your inspiration committed"</string>
    <string name="toast_wrong_picked_cells">Wrong relative</string>
    <string name="toast_success_set_session_time">Session time change successfully</string>
    <string name="toast_no_picked_elements">Please pick something first</string>
    <string name="toast_cant_find_image">Can\'t find image, problems occurred</string>
    <string name="toast_success_image_import">Image import success</string>
    <string name="toast_correct">Correct</string>
    <string name="toast_wrong">This value doesn\'t match</string>
    <string name="toast_empty_image">Please fill all cells with images</string>
    <string name="toast_cant_find_favorite_tags">Can\'t find kits by your favorite tag %s</string>
    <string name="toast_add_favorite_tags">Please add favorite tags</string>

    <string name="toast_success_authorisation">Authorisation is successful</string>
    <string name="toast_network_trouble">Can\'t establish network connection </string>
    <string name="toast_network_empty">Can\'t find kits by %s tags</string>
    <string name="toast_network_cell">Can\'t find cells, server error occurred</string>
    <string name="toast_kit_upload">Kit successful upload</string>
    <string name="toast_kit_name_error">Name doesn\'t unique</string>

    <string name="menu_settings">Settings</string>
    <string name="app_theme">Theme</string>
    <string name="app_settings_text_view">App preferences</string>
    <string name="settings_theme_hint">Change color of your app</string>
    <string name="settings_allow_statistics">Allow statistics</string>
    <string name="settings_collect_data_hint">Collect data from all sessions</string>
    <string name="change_language_btn">Language</string>
    <string name="english_language_text_view">English</string>
    <string name="what_inspiration_for_you_hint">What inspiration for you?</string>
    <string name="profile_settings_text_view">Profile</string>
    <string name="settings_user_quote">User quote</string>
    <string name="session">Session</string>
    <string name="session_by_key_or_value">By key or value</string>
    <string name="prefer_time_s">Prefer time %s sec</string>
    <string name="random_list">Random list</string>

    <string name="session_by_key">Session by key</string>
    <string name="empty_kit">Please first select kit</string>
    <string name="session_by_value">Session by value</string>
    <string name="session_by_image">Session by image</string>
    <string name="session_container_name_text_view">Sessions</string>
    <string name="choose_kit">Choose kit</string>
    <string name="kit">Kit</string>
    <string name="key">Key</string>
    <string name="prompt">Prompt</string>
    <string name="next">Next</string>

    <string name="session_end_result_text_view">Result</string>
    <string name="session_end_prompt_use">Prompt use :</string>
    <string name="session_end_mistakes">Mistakes :</string>
    <string name="session_end_kit_theme">Kit theme :</string>
    <string name="session_end_right">Right :</string>
    <string name="session_end_total">Total :</string>
    <string name="session_end_average_result">Average result by now :</string>
    <string name="session_end_total_average_result">Average result :</string>
    <string name="session_end_repeat">Repeat</string>
    <string name="session_end_back">Back</string>
    <string name="session_wrong_key">Incorrect key</string>

    <string name="cell_count">Cell count :</string>
    <string name="author">Author</string>
    <string name="user_agreement">I read and accept user agreement. Thereby i agree to the processing of my data</string>
    <string name="input_tags_for_kit_hint">Input tags for kit</string>
    <string name="kit_description_hint">Kit description</string>
    <string name="your_quote">Your quote</string>
    <string name="relative_lists">Relative lists</string>
    <string name="terminate">Terminate</string>
    <string name="session_by_key_value"><![CDATA[Session by key & value]]></string>

    <string name="submit">Submit</string>
    <string name="allow_use_statistics">Allow use statistics</string>
    <string name="undo">Undo</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="authorisation">Authorisation</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="later">Later</string>

    <string name="registration_failed">Some problem occurs, please try again</string>
    <string name="registration_success">Account successfully registered</string>
    <string name="registration_not_unique">Probably login or email doesn\'t unique</string>
    <string name="registration_data_is_not_valid">Wrong format</string>
    <string name="create_account_later">Create account later</string>
    <string name="find_by_tags">Find by tags</string>
    <string name="search">Search</string>
    <string name="upload">upload</string>
    <string name="you_may_also_like">You may also like by tag</string>
</resources>