<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">
    <TextView
        android:id="@+id/appSettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_settings_text_view"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <LinearLayout
        android:id="@+id/themeAndStatisticsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/appSettingsTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:id="@+id/themeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="9">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_theme"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_theme_hint"/>
            </LinearLayout>

            <Switch
                android:id="@+id/themeSwitchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bootstrap_gray_lighter"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="9">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_allow_statistics"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_collect_data_hint"/>
            </LinearLayout>
            <Switch
                android:id="@+id/statisticSwitchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
    
    <View
        android:id="@+id/themeAndStatisticSeparateLine"
        android:layout_width="match_parent"
        android:layout_height="11dp"
        android:background="@color/bootstrap_gray_lighter"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/themeAndStatisticsContainer"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/themeAndStatisticSeparateLine"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp">
        <LinearLayout
            android:id="@+id/currentLanguageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="12"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_language_btn"
                android:layout_weight="11"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english_language_text_view"
                android:layout_weight="1"
                android:textColor="@color/bootstrap_brand_info"/>
        </LinearLayout>
    </LinearLayout>
        

</androidx.constraintlayout.widget.ConstraintLayout>