<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="15dp">

    <LinearLayout
        android:id="@+id/kitInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="15"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <EditText
            android:id="@+id/kitNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:inputType="text"
            android:hint="@string/kit_name"/>
        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/addCellBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/add_cell"
            app:roundedCorners="true"
            app:bootstrapBrand="info"
            app:bootstrapSize="lg"/>
        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/changeKitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginStart="1dp"
            android:text="@string/update"
            app:roundedCorners="true"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg" />
    </LinearLayout>
    <ListView
        android:id="@+id/cellListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/kitInfoContainer"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/uploadKitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_upload_kit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/showKitStatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_statistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/uploadKitBtn"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>